Use rustup-init.sh from https://sh.rustup.rs/

--- a/nightly/Dockerfile
+++ b/nightly/Dockerfile
@@ -5,6 +5,7 @@ ENV RUST_DISTRIB rust-nightly-$RUST_TARGET
 ENV DOCKER_VERSION 17.05.0-ce
 
 WORKDIR /rust
+ADD rustup-init.sh .
 
 RUN apt-get -y update && apt-get install -q -y \
     build-essential \
@@ -12,12 +13,8 @@ RUN apt-get -y update && apt-get install -q -y \
     git-core \
     openssh-client \
     && \
-
-    curl -LO "https://static.rust-lang.org/dist/${RUST_DISTRIB}.tar.xz" && \
-    tar xvJf "${RUST_DISTRIB}.tar.xz" && \
-    "${RUST_DISTRIB}/install.sh" --components="rustc,cargo,rust-std-${RUST_TARGET}" && \
+    bash rustup-init.sh -y --verbose --default-toolchain=nightly && \
     rm -r /rust && \
-
     curl -L -o "/tmp/docker-${DOCKER_VERSION}.tgz" "https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_VERSION}.tgz" && \
     tar -xz -C /tmp -f "/tmp/docker-${DOCKER_VERSION}.tgz" && \
     mv /tmp/docker/* /usr/bin
